<resources>

    <string name="app_name">REIMC</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">REIMC</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Word</string>
    <string name="alarm_service_started">The alarm service has started running</string>
    <string name="alarm_service_finished">The alarm service has finished running</string>
    <string name="alarm_service_label">Sample Alarm Service</string>
    <string name="activity_alarm_service">App/Alarm/Alarm Service</string>
    <string name="alarm_service">This demonstrates how to schedule a repeating
        alarm that will initiate a long-lived operation through a service.</string>
    <string name="start_alarm_service">Start Alarm Service</string>
    <string name="stop_alarm_service">Stop Alarm Service</string>
    <string name="alarm_service_scheduled">Alarm service will run now, and then every
        30 seconds for 15 seconds</string>
    <string name="alarm_service_unscheduled">Alarm service has been unscheduled</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="local_service_started">Local service has started</string>
    <string name="local_service_stopped">Local service has stopped</string>
    <string name="local_service_label">Sample Local Service</string>
    <string name="local_service_connected">Connected to local service</string>
    <string name="local_service_disconnected">Disconnected from local service</string>
    <string name="local_service_controller">This demonstrates how you can implement persistent services that
        may be started and stopped as desired.</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="local_service_binding">This demonstrates how you can connect with a persistent
        service.  Notice how it automatically starts for you, and play around with the
        interaction between this and Local Service Controller.</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="activity_local_service_binding">App/Service/Local Service Binding</string>
    <string name="activity_local_service_controller">App/Service/Local Service Controller</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="start_profiling">Start Profiling</string>
    <string name="title_activity_profiling">ProfilingActivity</string>
    <string name="end_profiling">End Profiling</string>
    <string name="log_battery">Log Battery</string>
    <string name="log_network">Log Network</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="result_action">What would you like to do?</string>
    <string name="store_locally">Store On Device</string>
    <string name="store_remotely">Store Remotely</string>
    <string name="view_data">View Data</string>
    <string name="title_activity_view_data">ViewDataActivity</string>
    <string name="title_activity_send_data_to_server">SendDataToServerActivity</string>
    <string name="default_jsonendpoint">http://localhost:8080/reimc_rest/bookreader/br/json</string>
    <string name="server_name">Server JSON Endpoint</string>
    <string name="submit">Submit</string>

</resources>