<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/start_profiling_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/start_profiling"
        tools:context=".LandingActivity" />
    
    <CheckBox
        android:id="@+id/battery_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_profiling_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/log_battery"
        android:checked="true" />
    
    <CheckBox
        android:id="@+id/network_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_profiling_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/log_network" />

</RelativeLayout>
